<resources>
    <string name="app_name">ZonaEnglish</string>
    <string name="home">Home</string>
    <string name="live_class">Live Class</string>
    <string name="tutor">Tutor</string>
    <string name="profile">Profil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="url_image">http://zainpradana.com/zonaenglish%s</string>
    <string name="url_image_info_promo">http://zainpradana.com/zonaenglish%s</string>
    <string name="schedule">Schedule</string>
    <string name="saldo">Saldo</string>
    <string name="study_videos">Study Video</string>
    <string name="info_and_promo">Info and Promo</string>
    <string name="online_meetup">Online Meetup</string>
    <string name="offline_meetup">Offline Meetup</string>
    <string name="zone_talk">Zone Talk</string>
    <string name="speak_up">Speak Up</string>
    <string name="sample_title_zone_talk">Cara Mendapatkan Beasiswa</string>
    <string name="sample_desc_zone_talk">Mengetahui bagaimana dapat bersekolah dengan gratis di Luar Negeri</string>
    <string name="text_sample_desc_study">Praktik berbicara dengan pilihan topik dengan grammar, pengucapan yang benar, dan menggunakan kosa kata dalam konteks.</string>
    <string name="choose_level">Choose Level</string>
    <string name="selected_video">Selected Video</string>
    <string name="sample_code_level">A1</string>
    <string name="beginner">Beginner</string>
    <string name="sample_title_video">The Past (Don’t give up)</string>
    <string name="a1_beginner">A1 Beginner</string>
    <string name="a2_elementary">A2 Elementary</string>
    <string name="sample_lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Bibendum ultrices ipsum, amet phasellus sollicitudin. Facilisi hendrerit ultricies ut at pharetra proin turpis viverra quis. Velit id quam mattis habitant amet molestie ac. Pellentesque non suspendisse massa viverra justo sit praesent.</string>
    <string name="total_viewers">Total Viewers</string>
    <string name="_5_000">5.000</string>
    <string name="practice_with_tutor_private">Practice with Tutor Private</string>
    <string name="sample_name">Nur Zain Pradana</string>
    <string name="sample_phone_number">0812-8128-6314</string>
    <string name="account">Account</string>
    <string name="change_profile">Change Profile</string>
    <string name="about">About</string>
    <string name="hint">Hint</string>
    <string name="advantage">Advantage</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update_photo_profile">Update Photo Profile</string>
    <string name="full_name">Full Name</string>
    <string name="number_phone">Number Phone</string>
    <string name="change">Change</string>
    <string name="nik">FRN (Family Registration Number)</string>
    <string name="sample_nik">3515080211970001</string>
    <string name="email">Email</string>
    <string name="sample_email">choirulpratama211@gmail.com</string>
    <string name="change_phone_number">Change Phone Number</string>
    <string name="registered_mobile_number">Registered Mobile Number</string>
    <string name="new_phone_number">New Phone Number</string>
    <string name="instructions">Instructions</string>
    <string name="do_re_login">Do re-login</string>
    <string name="save">Save</string>
    <string name="login_with_email">Login with Email</string>
    <string name="login_with_google">Login with Google</string>
    <string name="or">-or-</string>
    <string name="sign_up">Sign-up</string>
    <string name="don_t_have_account">Don\'t have Account?</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter Your Password?</string>
    <string name="show_password">Show Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="create_password">Create Password</string>
    <string name="verification_number_hp">Verification Number HP</string>
    <string name="desc_confirm_number_hp">Enter your cellphone number to help us confirm identity.</string>
    <string name="send_code_otp">Send Code OTP</string>
    <string name="skip_verification">Skip Verification</string>
    <string name="verifCodePassword">" Verification Passcode"</string>
    <string name="otp_code_sent">OTP code sent</string>
</resources>