<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_liveClass"
        android:icon="@drawable/ic_live_class"
        android:title="@string/live_class" />

    <item
        android:id="@+id/nav_Schedule"
        android:icon="@drawable/ic_schedule"
        android:title="@string/schedule" />

    <item
        android:id="@+id/nav_tutor"
        android:icon="@drawable/ic_tutor"
        android:title="@string/tutor" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

</menu>