<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mask="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.register.RegisterPhoneFragment">

    <include
        android:id="@+id/appBar"
        layout="@layout/appbar_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_codeVerif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/sf_ui_display_semibold"
        android:text="@string/verification_number_hp"
        android:textColor="@color/text_color_black_second"
        android:textSize="@dimen/text_size_xheader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar" />

    <TextView
        android:id="@+id/textView_descVerifPassCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:text="@string/desc_confirm_number_hp"
        app:layout_constraintStart_toStartOf="@id/textView_codeVerif"
        app:layout_constraintTop_toBottomOf="@id/textView_codeVerif" />

    <TextView
        android:id="@+id/textView_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_36dp"
        android:fontFamily="@font/sf_ui_display_medium"
        android:text="@string/number_phone"
        android:textColor="@color/text_color_brown"
        app:layout_constraintStart_toStartOf="@id/textView_codeVerif"
        app:layout_constraintTop_toBottomOf="@id/textView_descVerifPassCode" />

    <br.com.sapereaude.maskedEditText.MaskedEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:inputType="phone"
        app:keep_hint="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_number"
        mask:mask="+62-####-####-###" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_26dp"
        android:fontFamily="@font/sf_ui_display_medium"
        android:text="@string/skip_verification"
        android:textColor="@color/text_color_dark_blue"
        android:textSize="@dimen/text_size_xnormal"
        app:layout_constraintBottom_toTopOf="@id/btnSendOTP"
        app:layout_constraintEnd_toEndOf="@id/btnSendOTP"
        app:layout_constraintStart_toStartOf="@id/btnSendOTP" />

    <Button
        android:id="@+id/btnSendOTP"
        android:layout_width="@dimen/with_button"
        android:layout_height="@dimen/height_button"
        android:layout_marginBottom="@dimen/dimen_32dp"
        android:background="@drawable/bg_btn_dark_blue"
        android:backgroundTint="@color/color_primary"
        android:fontFamily="@font/sf_ui_display_medium"
        android:text="@string/send_code_otp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_xnormal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>