<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="190dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_zona_english" />

        <LinearLayout
            android:id="@+id/lLayoutLoginEmail"
            android:layout_width="@dimen/with_button"
            android:layout_height="@dimen/height_button"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:background="@drawable/bg_btn_red"
            android:orientation="horizontal"
            android:padding="9dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="@dimen/dimen_32dp"
                android:src="@drawable/ic_email" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/sf_ui_display_medium"
                android:gravity="center_horizontal"
                android:text="@string/login_with_email"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_xnormal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/with_button"
            android:layout_height="@dimen/height_button"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/bg_btn_gray"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="@dimen/dimen_32dp"
                android:src="@drawable/ic_google" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/sf_ui_display_medium"
                android:gravity="center"
                android:text="@string/login_with_google"
                android:textColor="@color/text_color_black_second"
                android:textSize="@dimen/text_size_xnormal" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/sf_ui_display_medium"
            android:text="@string/or"
            android:textColor="@color/text_color_gray_second"
            android:textSize="@dimen/text_size_xxnormal" />

        <LinearLayout
            android:id="@+id/lLayoutRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_ui_display_medium"
                android:text="@string/don_t_have_account"
                android:textSize="@dimen/text_size_xnormal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_ui_display_medium"
                android:text="@string/sign_up"
                android:textColor="@color/color_red"
                android:textSize="@dimen/text_size_xnormal" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>