<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.loginpassword.LoginPasswordActivity">

    <include
        android:id="@+id/appBar"
        layout="@layout/appbar_white" />

    <TextView
        android:id="@+id/textView_yourEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/sf_ui_display_semibold"
        android:text="@string/enter_your_password"
        android:textColor="@color/text_color_black_second"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_36dp"
        android:fontFamily="@font/sf_ui_display_medium"
        android:text="@string/password"
        android:textColor="@color/text_color_brown"
        app:layout_constraintStart_toStartOf="@id/textView_yourEmail"
        app:layout_constraintTop_toBottomOf="@id/textView_yourEmail" />

    <TextView
        android:id="@+id/tvShowPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:fontFamily="@font/sf_ui_display_medium"
        android:text="@string/show_password"
        android:textAllCaps="true"
        android:textColor="@color/text_color_brown"
        app:layout_constraintBottom_toBottomOf="@id/textViewEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/textViewEmail" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/textViewEmail"
        app:layout_constraintTop_toBottomOf="@id/textViewEmail" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:src="@drawable/ic_arrow_move"
        app:rippleColor="@color/color_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:fontFamily="@font/sf_ui_display_medium"
        android:text="@string/forgot_password"
        android:textColor="@color/text_color_brown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>